Style opportunity creation form

--- a/app/templates/create/createscholarship.html
+++ b/app/templates/create/createscholarship.html
@@ -89,7 +89,7 @@
             <input type="text" class="form-control" placeholder="Link" id="link0" name="link0">
         </div>
     </div>
-    <button type="button" class="btn btn-primary" id="add-link">Add Link</button><br>
+    <button type="button" class="btn btn-primary" id="add-link">Add Link</button>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
