--- a/app/templates/create/createopportunity.html
+++ b/app/templates/create/createopportunity.html
@@ -20,58 +20,74 @@
             <textarea name="description" class="form-control" id="description" rows="3"></textarea>
         </div>
     </div>
-    <div class="form-group">
-        <label for="field"><b>Field</b></label>
-        <select class="form-control" name="field" id="field">
-            <option value="ACADEMIC PROGRAMS">ACADEMIC PROGRAMS</option>
-            <option value="BUSINESS & JOBS">BUSINESS & JOBS</option>
-            <option value="COMMUNITY SERVICE">COMMUNITY SERVICE</option>
-            <option value="GOVT & LAW">GOVT & LAW</option>
-            <option value="LEADERSHIP & ADVOCACY">LEADERSHIP & ADVOCACY</option>
-            <option value="MUSEUMS & ART">MUSEUMS & ART</option>
-            <option value="PARKS, ZOOS, & NATURE">PARKS, ZOOS, & NATURE</option>
-            <option value="ENGINEERING, MATH, & CS">ENGINEERING, MATH, & CS</option>
-            <option value="MEDICAL & LIFE SCIENCES">MEDICAL & LIFE SCIENCES</option>
-            <option value="LITERATURE">LITERATURE</option>
-            <option value="PERFORMING ARTS">PERFORMING ARTS</option>
-            <option value="VISUAL ARTS">VISUAL ARTS</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="field"><b>Gender</b></label>
-        <select class="form-control" name="gender" id="gender">
-            <option value="both">Both</option>
-            <option value="female">Female only</option>
-            <option value="male">Male only</option>
-        </select>
-    </div>
-    <b>Start Date</b><br>
-    <input type="date" name="start"><br>
-    <b>End Date</b><br>
-    <input type="date" name="end"><br>
-    <b>Application Deadline</b><br>
-    <input type="date" name="deadline"><br>
-    <br>
-    <div class="form-group">
-        <label for="cost"><b>Cost</b></label>
-        <input name="cost" type="number" class="form-control" id="cost" placeholder="Enter cost" required>
-    </div>
-    <div class="form-group">
-        <label for="location"><b>Location</b></label>
-        <input name="location" type="text" class="form-control" id="location" placeholder="Location">
-    </div>
-    <div class="form-group">
-        <label for="grades"><b>Grades</b></label>
-        <input name="grades" type="text" class="form-control" id="grades"
-            placeholder="Enter grades separated by commas">
-    </div>
-    <b>Links</b><br>
-    <div id="links-container" class="form-group">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Link" id="link0" name="link0">
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label for="field"><b>Field</b></label>
+            <select class="form-control" name="field" id="field">
+                <option value="ACADEMIC PROGRAMS">ACADEMIC PROGRAMS</option>
+                <option value="BUSINESS & JOBS">BUSINESS & JOBS</option>
+                <option value="COMMUNITY SERVICE">COMMUNITY SERVICE</option>
+                <option value="GOVT & LAW">GOVT & LAW</option>
+                <option value="LEADERSHIP & ADVOCACY">LEADERSHIP & ADVOCACY</option>
+                <option value="MUSEUMS & ART">MUSEUMS & ART</option>
+                <option value="PARKS, ZOOS, & NATURE">PARKS, ZOOS, & NATURE</option>
+                <option value="ENGINEERING, MATH, & CS">ENGINEERING, MATH, & CS</option>
+                <option value="MEDICAL & LIFE SCIENCES">MEDICAL & LIFE SCIENCES</option>
+                <option value="LITERATURE">LITERATURE</option>
+                <option value="PERFORMING ARTS">PERFORMING ARTS</option>
+                <option value="VISUAL ARTS">VISUAL ARTS</option>
+            </select>
+        </div>
+        <div class="form-group col-md-4">
+            <label for="gender"><b>Gender</b></label>
+            <select class="form-control" name="gender" id="gender">
+                <option value="both">Both</option>
+                <option value="female">Female only</option>
+                <option value="male">Male only</option>
+            </select>
+        </div>
+        <div class="form-group col-md-4">
+            <label for="cost"><b>Cost</b></label>
+            <input name="cost" type="number" class="form-control" id="cost" placeholder="Enter cost ($)" required>
         </div>
     </div>
-    <button type="button" class="btn btn-primary" id="add-link">Add Link</button><br>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label  for="start"><b>Start Date</b><br>
+                <input type="date" name="start">
+            </label>
+        </div>
+        <div class="form-group col-md-4">
+            <label  for="end"><b>End Date</b><br>
+                <input type="date" name="end">
+            </label>
+        </div>
+        <div class="form-group col-md-4">
+            <label  for="deadline"><b>Application Deadline</b><br>
+                <input type="date" name="deadline">
+            </label>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="location"><b>Location</b></label>
+            <input name="location" type="text" class="form-control" id="location" placeholder="Enter Location">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="grades"><b>Grades</b></label>
+            <input name="grades" type="text" class="form-control" id="grades"
+                placeholder="Enter grades separated by commas (e.g. 9,10,11)">
+        </div>
+    </div>
+    <div class="mb-2 font-weight-bold">
+        Link(s)
+    </div>
+    <div id="links-container" class="form-group">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Add link" id="link0" name="link0">
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary" id="add-link">Add Another Link</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
 {% endblock %}
