--- a/app/templates/create/createscholarship.html
+++ b/app/templates/create/createscholarship.html
@@ -4,92 +4,46 @@
 <script defer src="{{ url_for('static', filename='js/create.js') }}"></script>
 {% endblock %}
 
-{% block heading %}
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-{% for category, message in messages %}
-{% if category == "error" %}
-<div class="alert alert-danger text-align-center alert-dismissible fade show" role="alert">
-{% endif %}
-    {% if category == "success" %}
-    <div class="alert alert-success text-align-center alert-dismissible fade show" role="alert">
-    {% endif %}
-    {{message}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close" tabindex="-2">
-            <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-{% endfor %}
-{% endif %}
-{% endwith %}
-{% endblock %}
+{% set active_page = active_page|default('scholarships') -%}
 
-{% block title %}Create Opportunity{% endblock %}
+{% block title %}Create Scholarship{% endblock %}
 
 {% block body %}
-<a tabindex="-1" href="/scholarships">GO BACK</a>
-<br>
 <form action="/opportunities/create" method="POST">
-    <div class="form-group">
-        <label for="title"><b>Title</b></label>
-        <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" required>
-    </div>
-    <div class="form-group">
-        <label for="description"><b>Description</b></label>
-        <textarea name="description" class="form-control" id="description" rows="3"></textarea>
-    </div>
-    <div class="form-group">
-        <label for="field"><b>Field</b></label>
-        <select class="form-control" name="field" id="field">
-            <option value="ACADEMIC PROGRAMS">ACADEMIC PROGRAMS</option>
-            <option value="BUSINESS & JOBS">BUSINESS & JOBS</option>
-            <option value="COMMUNITY SERVICE">COMMUNITY SERVICE</option>
-            <option value="GOVT & LAW">GOVT & LAW</option>
-            <option value="LEADERSHIP & ADVOCACY">LEADERSHIP & ADVOCACY</option>
-            <option value="MUSEUMS & ART">MUSEUMS & ART</option>
-            <option value="PARKS, ZOOS, & NATURE">PARKS, ZOOS, & NATURE</option>
-            <option value="ENGINEERING, MATH, & CS">ENGINEERING, MATH, & CS</option>
-            <option value="MEDICAL & LIFE SCIENCES">MEDICAL & LIFE SCIENCES</option>
-            <option value="LITERATURE">LITERATURE</option>
-            <option value="PERFORMING ARTS">PERFORMING ARTS</option>
-            <option value="VISUAL ARTS">VISUAL ARTS</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="field"><b>Gender</b></label>
-        <select class="form-control" name="gender" id="gender">
-            <option value="both">Both</option>
-            <option value="female">Female only</option>
-            <option value="male">Male only</option>
-        </select>
-    </div>
-    <b>Start Date</b><br>
-    <input type="date" name="start"><br>
-    <b>End Date</b><br>
-    <input type="date" name="end"><br>
-    <b>Application Deadline</b><br>
-    <input type="date" name="deadline"><br>
-    <br>
-    <div class="form-group">
-        <label for="cost"><b>Cost</b></label>
-        <input name="cost" type="number" class="form-control" id="cost" placeholder="Enter cost" required>
-    </div>
-    <div class="form-group">
-        <label for="location"><b>Location</b></label>
-        <input name="location" type="text" class="form-control" id="location" placeholder="Location">
-    </div>
-    <div class="form-group">
-        <label for="grades"><b>Grades</b></label>
-        <input name="grades" type="text" class="form-control" id="grades"
-            placeholder="Enter grades separated by commas">
-    </div>
-    <b>Links</b><br>
-    <div id="links-container" class="form-group">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Link" id="link0" name="link0">
+    <div class="form-group row">
+        <label for="title" class="col-sm-2 col-form-label font-weight-bold">Title</label>
+        <div class="col-sm-10">
+            <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" required>
         </div>
     </div>
-    <button type="button" class="btn btn-primary" id="add-link">Add Link</button>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group row">
+        <label for="description" class="col-sm-2 col-form-label font-weight-bold">Description</label>
+        <div class="col-sm-10">
+            <textarea name="description" class="form-control" id="description" rows="3"></textarea>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="deadline" class="col-sm-2 col-form-label font-weight-bold">Application Deadline</label>
+        <div class="col-sm-10">
+            <input type="date" name="deadline">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="eligibility" class="col-sm-2 col-form-label font-weight-bold">Eligibility</label>
+        <div class="col-sm-10">
+            <input name="eligibility" type="text" class="form-control" id="eligibility"
+                placeholder="Who is eligible for this scholarship?">
+        </div>
+    </div>
+    <div class="mb-2 font-weight-bold">
+        Link(s)
+    </div>
+    <div id="links-container" class="form-group">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Add link" id="link0" name="link0">
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary" id="add-link">Add Another Link</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
 {% endblock %}
