--- a/app/templates/create/resource.html
+++ b/app/templates/create/resource.html
@@ -2,46 +2,31 @@
 
 {% set active_page = active_page|default('resources') -%}
 
-{% block title %}Resources{% endblock %}
+{% block title %}Create Resource{% endblock %}
 
-{% block heading %}
-{{super()}}
-
-<span class="bar">
-  <div class="row">
-    <div class="col-sm">
-      <div class="form-group">
-        <select class="form-control" method="post" id="sort">
-          <option type="hidden"> Select a Sort </option>
-          <option value="dateposted-asc" id="dateposted-asc"> Date Created (↑)</option>
-          <option value="dateposted-desc" id="dateposted-desc">Date Created (↓)</option>
-        </select>
-      </div>
-    </div>
-    <div class="col-sm">
-      <form class="form-inline ">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+{% block body %}
+<form ation="/resources/create" method="POST">
+  <div class="form-group row">
+    <label for="title" class="col-sm-2 col-form-label font-weight-bold">Title</label>
+    <div class="col-sm-10">
+      <input name="title" type="text" class="form-control" id="title" placeholder="Enter title" required>
     </div>
   </div>
-</span>
-<br>
-
-<form>
-  <div class="form-group" type="post">
-    <label for="exampleFormControlInput1" name="Title" >Title</label>
-    <input type="text" class="form-control" type="required" id="Title" name="Title" placeholder="Resource Title">
+  <div class="form-group row">
+    <label for="link" class="col-sm-2 col-form-label font-weight-bold">Link</label>
+    <div class="col-sm-10">
+      <input name="link" type="text" class="form-control" type="required" id="Link"
+        placeholder="Provide a link for resource.">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="exampleFormControlInput2" name="Link">Link</label>
-    <input type="text" class="form-control" type="required" id="Link" name="Link" placeholder="Provide a link for resource.">
+  <div class="form-group row">
+    <label for="description" class="col-sm-2 col-form-label font-weight-bold">Description</label>
+    <div class="col-sm-10">
+      <input name="description" type="text" class="form-control" type="required" id="description"
+        placeholder="Please use this space to provide an explanation for the resource you are uploading.">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1" name="Description">Description</label>
-    <textarea class="form-control" id="Description" type="required" rows="3" id="Link" name="Description" placeholder="Please use this space to provide an explanation for the resource you are uploading."></textarea>
-  </div>
-  <input type="submit" value="Post Resource">
+  <button type="submit" class="btn btn-success">Submit</button>
 </form>
 
 {% endblock %}
