--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -24,18 +24,18 @@
         <div class="form-group col-md-4">
             <label for="field"><b>Field</b></label>
             <select class="form-control" name="field" id="field">
-                <option value="ACADEMIC PROGRAMS">ACADEMIC PROGRAMS</option>
-                <option value="BUSINESS & JOBS">BUSINESS & JOBS</option>
-                <option value="COMMUNITY SERVICE">COMMUNITY SERVICE</option>
-                <option value="GOVT & LAW">GOVT & LAW</option>
-                <option value="LEADERSHIP & ADVOCACY">LEADERSHIP & ADVOCACY</option>
-                <option value="MUSEUMS & ART">MUSEUMS & ART</option>
-                <option value="PARKS, ZOOS, & NATURE">PARKS, ZOOS, & NATURE</option>
-                <option value="ENGINEERING, MATH, & CS">ENGINEERING, MATH, & CS</option>
-                <option value="MEDICAL & LIFE SCIENCES">MEDICAL & LIFE SCIENCES</option>
-                <option value="LITERATURE">LITERATURE</option>
-                <option value="PERFORMING ARTS">PERFORMING ARTS</option>
-                <option value="VISUAL ARTS">VISUAL ARTS</option>
+                <option value="Academic Programs">Academic Programs</option>
+                <option value="Business & Jobs">Business & Jobs</option>
+                <option value="Community Service">Community Service</option>
+                <option value="Govt & Law">Govt & Law</option>
+                <option value="Leadership & Advocacy">Leadership & Advocacy</option>
+                <option value="Museums & Art"> Museums & Art</option>
+                <option value="Parks, Zoos, & Nature">Parks, Zoos, & Nature</option>
+                <option value="Engineering, Math, & CS">Engineering, Math, & CS</option>
+                <option value="Medical & Life Sciences">Medical & Life Sciences</option>
+                <option value="Literature">Literature</option>
+                <option value="Performing Arts">Performing Arts</option>
+                <option value="Visual Arts">Visual Arts</option>
             </select>
         </div>
         <div class="form-group col-md-4">
