--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -44,29 +44,29 @@
         <div class="col-sm">
           <b> FIELD </b> <br>
           <input type="checkbox" name="ACADEMIC" value="ACADEMIC">
-          <label for="field1"> ACADEMIC PROGRAMS </label><br>
+          <label for="field1"> Academic Programs </label><br>
           <input type="checkbox" name="BUSINESS" value="BUSINESS">
-          <label for="field2"> BUSINESS & JOBS </label><br>
+          <label for="field2"> Business & Jobs </label><br>
           <input type="checkbox" name="COMMUNITY" value="COMMUNITY">
-          <label for="field3"> COMMUNITY SERVICE </label><br>
+          <label for="field3"> Community Service</label><br>
           <input type="checkbox" name="GOVT" value="GOVT">
-          <label for="field4"> GOVT & LAW </label><br>
+          <label for="field4"> Govt & Law </label><br>
           <input type="checkbox" name="LEADERSHIP" value="LEADERSHIP">
-          <label for="field5"> LEADERSHIP & ADVOCACY </label><br>
+          <label for="field5"> Leadership & Advocacy </label><br>
           <input type="checkbox" name="MUSEUMS" value="MUSEUMS">
-          <label for="field6"> MUSEUMS & ART </label><br>
+          <label for="field6"> Museums & Art </label><br>
           <input type="checkbox" name="NATURE" value="NATURE">
-          <label for="field7"> PARKS, ZOOS, & NATURE </label><br>
+          <label for="field7"> Parks, Zoos, & Nature </label><br>
           <input type="checkbox" name="ENGINEERING" value="ENGINEERING">
-          <label for="field8"> ENGINEERING, MATH, & CS </label><br>
+          <label for="field8"> Engineering, Math, & CS </label><br>
           <input type="checkbox" name="MEDICAL" value="MEDICAL">
-          <label for="field9"> MEDICAL & LIFE SCIENCES</label><br>
+          <label for="field9"> Medical & Life Sciences</label><br>
           <input type="checkbox" name="ARTS" value="ARTS">
-          <label for="field10"> LITERATURE</label><br>
+          <label for="field10"> Literature</label><br>
           <input type="checkbox" name="THEATRE" value="THEATRE">
-          <label for="field11"> PERFORMING ARTS</label><br>
+          <label for="field11"> Performing Arts</label><br>
           <input type="checkbox" name="VISUAL" value="VISUAL">
-          <label for="field12"> VISUAL ARTS</label><br>
+          <label for="field12"> Visual Arts</label><br>
         </div>
 
         <div class="col-sm">
