--- a/app/templates/create/scholarship.html
+++ b/app/templates/create/scholarship.html
@@ -9,7 +9,7 @@
 {% block title %}Create Scholarship{% endblock %}
 
 {% block body %}
-<form action="/opportunities/create" method="POST">
+<form action="/scholarships/create" method="POST">
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label font-weight-bold">Title</label>
         <div class="col-sm-10">
@@ -26,6 +26,12 @@
         <label for="deadline" class="col-sm-2 col-form-label font-weight-bold">Application Deadline</label>
         <div class="col-sm-10">
             <input type="date" name="deadline">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="amount" class="col-sm-2 col-form-label font-weight-bold">Amount ($)</label>
+        <div class="col-sm-10">
+            <input name="amount" type="number" class="form-control" id="amount" placeholder="Enter the amount of money rewarded">
         </div>
     </div>
     <div class="form-group row">
