--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -54,20 +54,6 @@ body {
      outline: 1px;
 }
 
-a {
-     text-decoration: none;
-     color: black;
-}
-
-a:hover {
-     color: black;
-     text-decoration: none;
-}
-
-a:active {
-     color: black;
-}
-
 .slidecontainer {
   width: 100%;
 }
@@ -104,16 +90,14 @@ a:active {
 }
 
 .sidenav {
-  height: 50vh;
   width: 20vw;
-  padding: 2.5vw;
+  height: 50vh;
+  padding: 2vw;
   position: fixed;
   z-index: 1;
-  bottom: 10vh;
-  left: 0;
-  background-color: whitesmoke;
+  background-color: white;
   border: 1px solid gray;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 10px;
   overflow-x: hidden;
   padding-top: 20px;
 }
