scroll stuff added

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -19,7 +19,63 @@
         <option value="cost-asc" id="cost-asc"> Price (↑)</option>
         <option value="cost-desc" id="cost-desc"> Price (↓)</option>
     </select>
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <div class="overflow-auto">
+      <b> FIELD </b> <br>
+      <input type="checkbox" name="ACADEMIC" value="ACADEMIC">
+      <label for="field1"> Academic Programs </label><br>
+      <input type="checkbox" name="BUSINESS" value="BUSINESS">
+      <label for="field2"> Business & Jobs </label><br>
+      <input type="checkbox" name="COMMUNITY" value="COMMUNITY">
+      <label for="field3"> Community Service</label><br>
+      <input type="checkbox" name="GOVT" value="GOVT">
+      <label for="field4"> Govt & Law </label><br>
+      <input type="checkbox" name="LEADERSHIP" value="LEADERSHIP">
+      <label for="field5"> Leadership & Advocacy </label><br>
+      <input type="checkbox" name="MUSEUMS" value="MUSEUMS">
+      <label for="field6"> Museums & Art </label><br>
+      <input type="checkbox" name="NATURE" value="NATURE">
+      <label for="field7"> Parks, Zoos, & Nature </label><br>
+      <input type="checkbox" name="ENGINEERING" value="ENGINEERING">
+      <label for="field8"> Engineering, Math, & CS </label><br>
+      <input type="checkbox" name="MEDICAL" value="MEDICAL">
+      <label for="field9"> Medical & Life Sciences</label><br>
+      <input type="checkbox" name="ARTS" value="ARTS">
+      <label for="field10"> Literature</label><br>
+      <input type="checkbox" name="THEATRE" value="THEATRE">
+      <label for="field11"> Performing Arts</label><br>
+      <input type="checkbox" name="VISUAL" value="VISUAL">
+      <label for="field12"> Visual Arts</label><br>
+
+      <br>
+      <label for="minPrice"><b> MINIMUM PRICE </b> </label> <br>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <div class="input-group-text" id="btnGroupAddon">$</div>
+        </div>
+        <input type="text" class="form-control" id="minPrice" aria-describedby="" placeholder="Enter price">
+      </div>
+      <br>
+
+      <b> GRADE </b> <br>
+      <input type="checkbox" name="FROSH" value="FROSH">
+      <label for="grade1"> FRESHMAN </label><br>
+      <input type="checkbox" name="SOPH" value="SOPH">
+      <label for="grade2"> SOPHOMORE </label><br>
+      <input type="checkbox" name="JUNIOR" value="JUNIOR">
+      <label for="grade3"> JUNIOR </label><br>
+      <input type="checkbox" name="SENIOR" value="SENIOR">
+      <label for="grade4"> SENIOR </label><br>
+
+      <br>
+
+      <b> GENDER </b> <br>
+      <input type="checkbox" name="CO-ED" value="CO-ED">
+      <label for="grade1"> CO-ED </label><br>
+      <input type="checkbox" name="FEMALE" value="FEMALE">
+      <label for="grade2"> FEMALE </label><br>
+      </div>
+      <br>
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Show Results</button>
   </form>
 </div>
 
