--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -41,7 +41,7 @@
         <div class="form-group col-md-4">
             <label for="gender"><b>Gender</b></label>
             <select class="form-control" name="gender" id="gender">
-                <option value="both">Both</option>
+                <option value="both">Co-Ed</option>
                 <option value="female">Female only</option>
                 <option value="male">Male only</option>
             </select>
