cleaning html files

--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -12,13 +12,13 @@
     <div class="col-sm">
       <div class="form-group">
         <select class="form-control" method="post" id="sort">
-          <option type="hidden"> Select a Sort </option>
-          <option value="dateposted-asc" id="dateposted-asc"> Date Created (↑)</option>
-          <option value="dateposted-desc" id="dateposted-desc">Date Created (↓)</option>
-          <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
+          <option type="hidden" value="default">Select a sort</option>
+          <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
+          <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
           <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
-          <option value="award-asc" id="award-asc"> Scholarship Amount (↑)</option>
-          <option value="award-desc" id="award-desc"> Scholarship Amount (↓)</option>
+          <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
+          <option value="cost-desc" id="cost-desc"> Price (↓)</option>
+          <option value="cost-asc" id="cost-asc"> Price (↑)</option>
         </select>
       </div>
 
