--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -20,41 +20,41 @@
         <option value="cost-desc" id="cost-desc"> Price (↓)</option>
         <option value="cost-asc" id="cost-asc"> Price (↑)</option>
     </select>
-    
+
     <div class="overflow-auto">
       <b> Field </b>
       <br>
-      <input type="checkbox" name="ACADEMIC" value="ACADEMIC">
+      <input type="checkbox" name="Academic Programs" value="Academic Programs">
       <label for="field1"> Academic Programs </label><br>
-      <input type="checkbox" name="BUSINESS" value="BUSINESS">
+      <input type="checkbox" name="Business & Jobs" value="Business & Jobs">
       <label for="field2"> Business & Jobs </label><br>
-      <input type="checkbox" name="COMMUNITY" value="COMMUNITY">
+      <input type="checkbox" name="Community Service" value="Community Service">
       <label for="field3"> Community Service</label><br>
-      <input type="checkbox" name="GOVT" value="GOVT">
+      <input type="checkbox" name="Govt & Law" value="Govt & Law">
       <label for="field4"> Govt & Law </label><br>
-      <input type="checkbox" name="LEADERSHIP" value="LEADERSHIP">
+      <input type="checkbox" name="Leadership & Advocacy" value="Leadership & Advocacy">
       <label for="field5"> Leadership & Advocacy </label><br>
-      <input type="checkbox" name="MUSEUMS" value="MUSEUMS">
+      <input type="checkbox" name="Museums & Art" value="Museums & Art">
       <label for="field6"> Museums & Art </label><br>
-      <input type="checkbox" name="NATURE" value="NATURE">
+      <input type="checkbox" name="Parks, Zoos, & Nature" value="Parks, Zoos, & Nature">
       <label for="field7"> Parks, Zoos, & Nature </label><br>
-      <input type="checkbox" name="ENGINEERING" value="ENGINEERING">
+      <input type="checkbox" name="Engineering, Math, & CS" value="Engineering, Math, & CS">
       <label for="field8"> Engineering, Math, & CS </label><br>
-      <input type="checkbox" name="MEDICAL" value="MEDICAL">
+      <input type="checkbox" name="Medical & Life Sciences" value="Medical & Life Sciences">
       <label for="field9"> Medical & Life Sciences</label><br>
-      <input type="checkbox" name="ARTS" value="ARTS">
+      <input type="checkbox" name="Literature" value="Literature">
       <label for="field10"> Literature</label><br>
-      <input type="checkbox" name="THEATRE" value="THEATRE">
+      <input type="checkbox" name="Performing Arts" value="Performing Arts">
       <label for="field11"> Performing Arts</label><br>
-      <input type="checkbox" name="VISUAL" value="VISUAL">
+      <input type="checkbox" name="Visual Arts" value="Visual Arts">
       <label for="field12"> Visual Arts</label><br>
       <br>
-      <label for="minPrice"><b> Minimum Price </b> </label> <br>
+      <label for="minPrice"><b> Maximum Price </b> </label> <br>
       <div class="input-group">
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
-        <input type="text" class="form-control" id="minPrice" aria-describedby="" placeholder="Enter price">
+        <input type="number" class="form-control" id="maxPrice" aria-describedby="" placeholder="Enter price">
       </div>
       <br>
 
