--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -50,7 +50,7 @@
       <label for="field12"> Visual Arts</label><br>
       <br>
       <label for="minPrice"><b> Maximum Price </b> </label> <br>
-      <div class="input-group">
+      <div style="width: 19vw;" class="input-group">
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
