--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -79,7 +79,7 @@
       <label for="gender3"> Female only </label><br>
       </div>
       <br>
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Show Results</button>
+      <button class="btn btn-outline-primary w-100" type="submit">Show Results</button>
   </form>
 </div>
 
