--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -21,6 +21,13 @@
         <option value="cost-asc" id="cost-asc"> Price (↑)</option>
     </select>
 
+    <button style="margin-bottom: 2vh;" class="btn btn-primary form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
+      aria-expanded="false" aria-controls="collapseExample">
+      Filter
+    </button>
+    <br>
+    <div class="collapse" id="collapseExample" style="margin-bottom: 2vh;">
+    <div class="card card-body">
     <div class="overflow-auto">
       <b> Field </b>
       <br>
@@ -78,10 +85,12 @@
       <input type="checkbox" name="FEMALE" value="FEMALE">
       <label for="gender3"> Female only </label><br>
       </div>
-      <br>
+      </div>
+      </div>
       <button class="btn btn-outline-primary w-100" type="submit">Show Results</button>
   </form>
 </div>
+
 
 <!--
 <span class="bar">
