--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -41,9 +41,9 @@
         <div class="form-group col-md-4">
             <label for="gender"><b>Gender</b></label>
             <select class="form-control" name="gender" id="gender">
-                <option value="both">Co-Ed</option>
-                <option value="female">Female only</option>
-                <option value="male">Male only</option>
+                <option value="co-ed">Co-Ed</option>
+                <option value="female-only">Female only</option>
+                <option value="male-only">Male only</option>
             </select>
         </div>
         <div class="form-group col-md-4">
