--- a/app/templates/view/individual.html
+++ b/app/templates/view/individual.html
@@ -49,20 +49,20 @@
 <br>
 
 <!-- date -->
-{% if opp.startDate or opp.endDate %}
+{% if date[0] or date[1] %}
 <h3 class="subtitle">
-     {% if opp.startDate %}
-          {{ opp.startDate }}
+     {% if date[0] %}
+          {{ date[0] }}
      {% endif %}
-     {% if opp.endDate %}
-           - {{ opp.endDate }}
+     {% if date[1] %}
+           - {{ date[1] }}
      {% endif %} 
 </h3>
 {% endif %}
 
 <!-- deadline -->
-{% if opp.deadline %}
-<h3 class="subtitle"><b>DEADLINE: {{ opp.deadline }} </b></h3>
+{% if date[2] %}
+<h3 class="subtitle"><b>DEADLINE: {{ date[2] }} </b></h3>
 {% endif %}
 
 <br>
