--- a/app/templates/create/opportunity.html
+++ b/app/templates/create/opportunity.html
@@ -48,7 +48,7 @@
         </div>
         <div class="form-group col-md-4">
             <label for="cost"><b>Cost</b></label>
-            <input name="cost" type="number" min=0 step=0.01 class="form-control" id="cost" placeholder="Enter cost ($)" required>
+            <input name="cost" type="number" min=0 step=0.01 value=0 class="form-control" id="cost" placeholder="Enter cost ($)" required>
         </div>
     </div>
     <div class="form-row">
