--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -12,7 +12,7 @@
     <h5> <b> Refine Results </b> </h5> <hr>
     <input style="margin-bottom: 2vh;" class="form-control" type="search" placeholder="Search" aria-label="Search">
     <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort">
-        <option type="hidden" value="default">Select a sort</option>
+        <!-- <option type="hidden" value="default">Select a sort</option> -->
         <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
         <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
         <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
@@ -61,7 +61,7 @@
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
-        <input type="number" class="form-control" id="maxPrice" aria-describedby="" placeholder="Enter price">
+        <input type="number" class="form-control" id="maxPrice" aria-describedby="" value="None" placeholder="Enter price">
       </div>
       <br>
 
