--- a/app/templates/view/resources.html
+++ b/app/templates/view/resources.html
@@ -12,7 +12,7 @@
     <div class="col-sm">
       <div class="form-group">
         <select class="form-control" method="post" id="sort">
-          <option type="hidden"> Select a Sort </option>
+          <!-- <option type="hidden"> Select a Sort </option> -->
           <option value="dateposted-desc" id="dateposted-desc">Date Created (↓)</option>
           <option value="dateposted-asc" id="dateposted-asc"> Date Created (↑)</option>
         </select>
