--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -12,7 +12,7 @@
     <div class="col-sm">
       <div class="form-group">
         <select class="form-control" method="post" id="sort">
-          <option type="hidden" value="default">Select a sort</option>
+          <!-- <option type="hidden" value="default">Select a sort</option> -->
           <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
           <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
           <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
