made filter, show results smaller

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -21,7 +21,7 @@
         <option value="cost-asc" id="cost-asc"> Price (↑)</option>
     </select>
 
-    <button style="margin-bottom: 2vh;" class="btn btn-primary form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
+    <button style="margin-bottom: 2vh;" class="btn btn-primary btn-sm form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
       aria-expanded="false" aria-controls="collapseExample">
       Filter
     </button>
@@ -87,7 +87,7 @@
       </div>
       </div>
       </div>
-      <button class="btn btn-outline-primary w-100" type="submit">Show Results</button>
+      <button class="btn btn-outline-primary btn-sm w-100" type="submit">Show Results</button>
   </form>
 </div>
 
