fixed height of sidebar slightly, and changed width of price filter

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -57,7 +57,7 @@
       <label for="field12"> Visual Arts</label><br>
       <br>
       <label for="minPrice"><b> Maximum Price </b> </label> <br>
-      <div style="width: 19vw;" class="input-group">
+      <div style="width: 16vw;" class="input-group">
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
@@ -79,7 +79,7 @@
 
       <b> Gender </b> <br>
       <input type="checkbox" name="CO-ED" value="CO-ED">
-      <label for="gender1"> Co-Ed </label><br>
+      <label for="gender1"> Co-ed </label><br>
       <input type="checkbox" name="MALE" value="MALE">
       <label for="gender2"> Male only </label><br>
       <input type="checkbox" name="FEMALE" value="FEMALE">
