cleaned up logout button and favorite button

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -126,6 +126,16 @@ div.overflow-auto {
   width: auto;
 }
 
+.tag-block .star {
+     color: #ff8ff0 !important;
+     transition: 250ms;
+}
+
+.tag-block .star:hover {
+     color: rgb(0,123,255) !important;
+     transition: 250ms;
+}
+
 /* landing page CSS */
 
 .landing-body {
