--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -79,6 +79,7 @@
                {% endfor %}
                <a
                     style="float: right"
+                    class="text-danger"
                     href="/logout"
                     {% if "create" in request.url %}
                     tabindex="-1"
