--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -96,7 +96,12 @@
   {% for opp in opportunityList %}
   <div class="opp-block">
     <br>
-    <a href="/opportunities/{{ opp.opportunityID }}"><h3>{{ opp.title }}</h3></a>
+    <a href="/opportunities/{{ opp.opportunityID }}"><h3>{{ opp.title }}</a> &nbsp;
+    <!-- field -->
+      {% if opp.field %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp;  {{ opp.field }} &nbsp; </a> &nbsp;
+      {% endif %}
+    </h3></a>
     <!-- date -->
     {% if date[opp.opportunityID][0] or date[opp.opportunityID][1] %}
     <span> 
@@ -113,8 +118,51 @@
     <b>DEADLINE: {{ date[opp.opportunityID][2] }} </b>
     {% endif %}
 
-    <br> <br>
+    <br>
+    <hr>
     </span>
+    <!-- location -->
+    <p><b>{{ opp.location }}</b></p>
+    
+    <!-- description -->
+    <p>{{ opp.description }}</p>
+    <!-- links -->
+    {% for link in opp.links %}
+    <a href="{{ link }}">{{ link }}</a> <br>
+    {% endfor %}
+
+    <hr>
+
+    <!-- tags -->
+    <div class="tag-block">
+      <!-- gender -->
+      {% if opp.gender %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; {{ opp.gender }} &nbsp; </a> &nbsp;
+      {% endif %}
+    
+      <!-- cost (if free) -->
+      {% if opp.cost == 0 %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; free &nbsp;</a> &nbsp;
+      {% endif %}
+    
+      <!-- grades -->
+      {% for grade in opp.grades %}
+      {% if grade == 9 %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; freshmen &nbsp; </a> &nbsp;
+      {% elif grade == 10 %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; sophomores &nbsp; </a> &nbsp;
+      {% elif grade == 11 %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; juniors &nbsp; </a> &nbsp;
+      {% elif grade == 12 %}
+      <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; seniors &nbsp; </a> &nbsp;
+      {% endif %}
+      {% endfor %}
+
+      <a style="float: right; font-size: 20px" class="text-secondary star" href="/opportunities"><i class="fa fa-star" aria-hidden="true"></i></a>
+    </div>
+
+
+    <br>
   </div>
   {% endfor %}
 </div>
