edited filter button in sidebar

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -23,7 +23,7 @@
 
     <button style="margin-bottom: 2vh;" class="btn btn-primary btn-sm form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
       aria-expanded="false" aria-controls="collapseExample">
-      Filter
+      Filter &#9662;
     </button>
     <br>
     <div class="collapse" id="collapseExample" style="margin-bottom: 2vh;">
