Add minimum value for maximum price field

--- a/app/templates/view/opportunities.html
+++ b/app/templates/view/opportunities.html
@@ -61,7 +61,7 @@
         <div class="input-group-prepend">
           <div class="input-group-text" id="btnGroupAddon">$</div>
         </div>
-        <input type="number" class="form-control" id="maxPrice" aria-describedby="" value="None" placeholder="Enter price">
+        <input type="number" class="form-control" id="maxPrice" aria-describedby="" value="None" min="0" placeholder="Enter price">
       </div>
       <br>
 
