adding side nav to scholarships

--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -7,32 +7,90 @@
 {% block heading %}
 {{super()}}
 
-<span class="bar">
-  <div class="row">
-    <div class="col-sm">
-      <div class="form-group">
-        <select class="form-control" method="post" id="sort">
-          <!-- <option type="hidden" value="default">Select a sort</option> -->
-          <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
-          <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
-          <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
-          <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
-          <option value="cost-desc" id="cost-desc"> Price (↓)</option>
-          <option value="cost-asc" id="cost-asc"> Price (↑)</option>
-        </select>
+<!-- SIDENAV -->
+<div class="sidenav">
+  <form class="w-100" method="post">
+    <h5> <b> Refine Results </b> </h5> <hr>
+    <input style="margin-bottom: 2vh;" class="form-control" type="search" placeholder="Search" aria-label="Search">
+    <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort">
+        <!-- <option type="hidden" value="default">Select a sort</option> -->
+        <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
+        <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
+        <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
+        <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
+        <option value="cost-desc" id="cost-desc"> Price (↓)</option>
+        <option value="cost-asc" id="cost-asc"> Price (↑)</option>
+    </select>
+
+    <button style="margin-bottom: 2vh;" class="btn btn-primary btn-sm form-control" type="button" data-toggle="collapse" data-target="#collapseExample"
+      aria-expanded="false" aria-controls="collapseExample">
+      Filter &#9662;
+    </button>
+    <br>
+    <div class="collapse" id="collapseExample" style="margin-bottom: 2vh;">
+    <div class="card card-body">
+    <div class="overflow-auto">
+      <b> Field </b>
+      <br>
+      <input type="checkbox" name="Academic Programs" value="Academic Programs">
+      <label for="field1"> Academic Programs </label><br>
+      <input type="checkbox" name="Business & Jobs" value="Business & Jobs">
+      <label for="field2"> Business & Jobs </label><br>
+      <input type="checkbox" name="Community Service" value="Community Service">
+      <label for="field3"> Community Service</label><br>
+      <input type="checkbox" name="Govt & Law" value="Govt & Law">
+      <label for="field4"> Govt & Law </label><br>
+      <input type="checkbox" name="Leadership & Advocacy" value="Leadership & Advocacy">
+      <label for="field5"> Leadership & Advocacy </label><br>
+      <input type="checkbox" name="Museums & Art" value="Museums & Art">
+      <label for="field6"> Museums & Art </label><br>
+      <input type="checkbox" name="Parks, Zoos, & Nature" value="Parks, Zoos, & Nature">
+      <label for="field7"> Parks, Zoos, & Nature </label><br>
+      <input type="checkbox" name="Engineering, Math, & CS" value="Engineering, Math, & CS">
+      <label for="field8"> Engineering, Math, & CS </label><br>
+      <input type="checkbox" name="Medical & Life Sciences" value="Medical & Life Sciences">
+      <label for="field9"> Medical & Life Sciences</label><br>
+      <input type="checkbox" name="Literature" value="Literature">
+      <label for="field10"> Literature</label><br>
+      <input type="checkbox" name="Performing Arts" value="Performing Arts">
+      <label for="field11"> Performing Arts</label><br>
+      <input type="checkbox" name="Visual Arts" value="Visual Arts">
+      <label for="field12"> Visual Arts</label><br>
+      <br>
+      <label for="minPrice"><b> Maximum Price </b> </label> <br>
+      <div style="width: 16vw;" class="input-group">
+        <div class="input-group-prepend">
+          <div class="input-group-text" id="btnGroupAddon">$</div>
+        </div>
+        <input type="number" class="form-control" id="maxPrice" aria-describedby="" value="None" placeholder="Enter price">
       </div>
+      <br>
 
-    </div>
-    <div class="col-sm">
-      <form class="form-inline ">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</span>
+      <b> Grade </b> <br>
+      <input type="checkbox" name="FROSH" value="FROSH">
+      <label for="grade1"> Freshman </label><br>
+      <input type="checkbox" name="SOPH" value="SOPH">
+      <label for="grade2"> Sophomore </label><br>
+      <input type="checkbox" name="JUNIOR" value="JUNIOR">
+      <label for="grade3"> Junior </label><br>
+      <input type="checkbox" name="SENIOR" value="SENIOR">
+      <label for="grade4"> Senior </label><br>
 
-<br>
+      <br>
+
+      <b> Gender </b> <br>
+      <input type="checkbox" name="CO-ED" value="CO-ED">
+      <label for="gender1"> Co-ed </label><br>
+      <input type="checkbox" name="MALE" value="MALE">
+      <label for="gender2"> Male only </label><br>
+      <input type="checkbox" name="FEMALE" value="FEMALE">
+      <label for="gender3"> Female only </label><br>
+      </div>
+      </div>
+      </div>
+      <button class="btn btn-outline-primary btn-sm w-100" type="submit">Show Results</button>
+  </form>
+</div>
 
 {% endblock %}
 
