--- a/app/templates/view/resources.html
+++ b/app/templates/view/resources.html
@@ -14,12 +14,8 @@
     <input style="margin-bottom: 2vh;" class="form-control" type="search" placeholder="Search" aria-label="Search">
     <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort">
         <!-- <option type="hidden" value="default">Select a sort</option> -->
-        <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
-        <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
-        <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
-        <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
-        <option value="cost-desc" id="cost-desc"> Price (↓)</option>
-        <option value="cost-asc" id="cost-asc"> Price (↑)</option>
+        <option value="dateposted-desc" id="dateposted-desc">Date Created (Newest - Oldest)</option>
+        <option value="dateposted-asc" id="dateposted-asc"> Date Created (Oldest - Newest)</option>
     </select>
 
       <button class="btn btn-outline-primary btn-sm w-100" type="submit">Show Results</button>
