--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -7,24 +7,50 @@
 {% block heading %}
 {{super()}}
 
-<!-- SIDENAV -->
 <div class="sidenav">
   <form class="w-100" method="post">
     <h5> <b> Refine Results </b> </h5> <hr>
     <input style="margin-bottom: 2vh;" class="form-control" type="search" placeholder="Search" aria-label="Search">
     <select style="margin-bottom: 2vh;" class="form-control" method="post" id="sort">
         <!-- <option type="hidden" value="default">Select a sort</option> -->
-        <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
-        <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
-        <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
-        <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
-        <option value="cost-desc" id="cost-desc"> Price (↓)</option>
-        <option value="cost-asc" id="cost-asc"> Price (↑)</option>
+        <option value="dateposted-desc" id="dateposted-desc">Date Created (Newest - Oldest)</option>
+        <option value="dateposted-asc" id="dateposted-asc"> Date Created (Oldest - Newest)</option>
+        <option value="deadline-desc" id="deadline-desc"> Deadline (Most Recent - Least Recent)</option>
+        <option value="deadline-asc" id="deadline-asc"> Deadline (Most Recent - Least Recent))</option>
+        <option value="cost-desc" id="cost-desc"> Award ($ - $$$$)</option>
+        <option value="cost-asc" id="cost-asc"> Award ($$$$ - $)</option>
     </select>
 
       <button class="btn btn-outline-primary btn-sm w-100" type="submit">Show Results</button>
   </form>
 </div>
+
+<span class="bar">
+  <div class="row">
+    <div class="col-sm">
+      <div class="form-group">
+        <select class="form-control" method="post" id="sort">
+          <!-- <option type="hidden" value="default">Select a sort</option> -->
+          <option value="dateposted-desc" id="dateposted-desc">Date created (↓)</option>
+          <option value="dateposted-asc" id="dateposted-asc"> Date created (↑)</option>
+          <option value="deadline-desc" id="deadline-desc"> Deadline (↓)</option>
+          <option value="deadline-asc" id="deadline-asc"> Deadline (↑)</option>
+          <option value="cost-desc" id="cost-desc"> Price (↓)</option>
+          <option value="cost-asc" id="cost-asc"> Price (↑)</option>
+        </select>
+      </div>
+
+    </div>
+    <div class="col-sm">
+      <form class="form-inline ">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</span>
+
+<br>
 
 {% endblock %}
 
