--- a/app/templates/create/scholarship.html
+++ b/app/templates/create/scholarship.html
@@ -25,13 +25,13 @@
     <div class="form-group row">
         <label for="deadline" class="col-sm-2 col-form-label font-weight-bold">Application Deadline</label>
         <div class="col-sm-10">
-            <input type="date" name="deadline">
+            <input type="date" name="deadline" required>
         </div>
     </div>
     <div class="form-group row">
         <label for="amount" class="col-sm-2 col-form-label font-weight-bold">Amount ($)</label>
         <div class="col-sm-10">
-            <input name="amount" type="number" class="form-control" id="amount" placeholder="Enter the amount of money rewarded">
+            <input name="amount" type="number" type="number" min=0 step=0.01 value=0 class="form-control" id="amount" placeholder="Enter the amount of money rewarded">
         </div>
     </div>
     <div class="form-group row">
